--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - pip install flask
   - pip install flask_restful
   - pip install requests
+  - pip install requests_cache
   - pip install -e .
 
 script:
